--- a/app/src/main/res/layout/activity_selected_category_options.xml
+++ b/app/src/main/res/layout/activity_selected_category_options.xml
@@ -1,15 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SelectedCategoryOptions">
+    tools:context=".SelectedCategoryOptions"
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingTop="10dp"
+        android:text="Available Story Options"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="20sp"
+
+        />
 
     <ListView
-        android:id="@+id/selectedcatoptions_listview"
+        android:id="@+id/available_stories_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
